--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
   db:
     image: postgres:13.7-alpine
-    container_name: shareit_db_container
+    container_name: postgres_db_container
     ports:
       - "6541:5432"
     environment:
